--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
 </head>
 
 <body>
-    <h2>fazer login</h2>
-    <fieldset>
-        <legend>email:</legend>
-        <input type="email" name="email" placeholder="email" id=""><br>
-        
-    </fieldset>
-    <fieldset>
-        <legend>senha:</legend>
-        <input type="password" name="senha" placeholder="senha" id=""><br>
-    </fieldset>
-    <button>entrar</button> <br>
-    <a href="cadastrar.html">cadastrar</a>
-    <a href="recuperar.html">esqueceu a senha?</a>
+    <header>
+    </header>
+    <main>
+        <h1>Seja Bem Vindo</h1>
+        <h3>efetue seu login</h3>
+        <form action="">
+            <fieldset>
+                <legend>email ou usuario:</legend>
+                <input type="email" name="email" id=""><br>
+
+            </fieldset>
+            <fieldset>
+                <legend>senha:</legend>
+                <input type="password" name="senha" id=""><br>
+            </fieldset>
+            <button>entrar</button> <br>
+        </form>
+        <div>
+            <a href="cadastrar.html">cadastrar</a>
+            <a href="recuperar.html">esqueceu a senha?</a>
+        </div>
+    </main>
 </body>
 
 </html>
