--- a/sistema.html
+++ b/sistema.html
@@ -10,61 +10,75 @@
 
 <body>
     <header>
-        <h1>sistema cozinha </h1>
+        <h1>sistema cozinha</h1>
         <button>sair</button>
     </header>
+
     <main>
-        <h2>lista de cardapio</h2>
-        <table>
-            <tr>
-                <th>turno</th>
-                <th>data</th>
-                <th>refeicao</th>
-            </tr>
-            <tr>
-                <td>manha</td>
-                <td>22/09/25</td>
-                <td>almoco</td>
-            </tr>
-            <tr>
-                <td>tarde</td>
-                <td>22/09/25</td>
-                <td>almoco</td>
-            </tr>
-            <tr>
-                <td>noite</td>
-                <td>22/09/25</td>
-                <td>janta</td>
-            </tr>
-            <tr>
-                <td>integral</td>
-                <td>22/09/25</td>
-                <td>lanche</td>
-            </tr>
-        </table><br><br>
-        <h2>fale conosco</h2>
-        <label for="option">escolha o assunto:</label>
+        <div>
+            <section>
+                <h2>lista de cardapio</h2>
+                <table>
+                    <tr>
+                        <th>turno</th>
+                        <th>data</th>
+                        <th>refeicao</th>
+                    </tr>
+                    <tr>
+                        <td>manha</td>
+                        <td>22/09/25</td>
+                        <td>almoco</td>
+                    </tr>
+                    <tr>
+                        <td>tarde</td>
+                        <td>22/09/25</td>
+                        <td>almoco</td>
+                    </tr>
+                    <tr>
+                        <td>noite</td>
+                        <td>22/09/25</td>
+                        <td>janta</td>
+                    </tr>
+                    <tr>
+                        <td>integral</td>
+                        <td>22/09/25</td>
+                        <td>lanche</td>
+                    </tr>
+                </table><br><br>
+            </section>
 
-        <select name="assunto" id="assunto">
-            <option value="reclamacoes">reclamacoes</option>
-            <option value="solucoes">solucoes</option>
-            <option value="sugentoes">sugentoes</option>
-        </select><br><br>
-        <input type="text" name="escreva aqui" placeholder="escreva aqui"><br>
-        <button>enviar</button>
+            <section>
+
+                <h2>cadastrar prato</h2>
+                <input type="number" name="data" placeholder="data"><br>
+                <input type="text" name="turno" placeholder="turno"><br>
+
+                <h2>refeição</h2>
+                <input type="text" name="titulo" placeholder="titulo"><br>
+                <input type="text" name="itens" placeholder="itens"><br>
+                <input type="text" name="bebida" placeholder="bebida"><br>
+
+                <button>inserir img</button><br><br>
+                <button>cadastrar</button>
+            </section>
+        </div>
+        <aside>
+
+            <h2>fale conosco</h2>
+            <label for="option">escolha o assunto:</label>
+            <form action="">
+
+                <select name="assunto" id="assunto">
+                    <option value="reclamacoes">reclamacoes</option>
+                    <option value="solucoes">solucoes</option>
+                    <option value="sugentoes">sugentoes</option>
+                </select><br><br>
+                <input type="text" name="escreva aqui" placeholder="escreva aqui"><br>
+                <button>enviar</button>
+            </form>
+        </aside>
 
 
-        <h2>cadastrar prato</h2>
-        <input type="number" name="data" placeholder="data"><br>
-        <input type="text" name="turno" placeholder="turno"><br>
-
-        <h2>refeicao</h2>
-        <input type="text" name="titulo" placeholder="titulo"><br>
-        <input type="text" name="itens" placeholder="itens"><br>
-        <input type="text" name="bebida" placeholder="bebida"><br>
-
-        <button>inserir img</button><br><br>
-        <button>cadastrar</button>
 
     </main>
 </body>
