--- a/recuperar.html
+++ b/recuperar.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h2>recuperar senha</h2>
     <fieldset>
         <legend>email:</legend>
-        <input type="email" name="email" placeholder="email" id=""><br>
-        
+        <input type="email" name="email" id=""><br>
+
     </fieldset>
     <p>o codigo sera enviado para o e-mail</p>
     <button>enviar</button>
 </body>
+
 </html>
