--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 
 <body>
     <header>
-    </header>
-    <main>
         <h1>Seja Bem Vindo</h1>
         <h3>efetue seu login</h3>
+    </header>
+    <main>
+
+        <figure>
+            <img src="./img/google.png" alt="">
+            <img src="./img/face.png" alt="">
+        </figure>
+
         <form action="">
             <fieldset>
                 <legend>email ou usuario:</legend>
@@ -24,11 +30,12 @@
                 <legend>senha:</legend>
                 <input type="password" name="senha" id=""><br>
             </fieldset>
-            <button>entrar</button> <br>
+            <button>acessar</button> <br>
         </form>
         <div>
-            <a href="cadastrar.html">cadastrar</a>
-            <a href="recuperar.html">esqueceu a senha?</a>
+            <a href="cadastrar.html">Cadastrar-se</a><br>
+            <a class="desativado" href="recuperar.html">Esqueceu a senha?</a>
+
         </div>
     </main>
 </body>
