--- a/recuperar.html
+++ b/recuperar.html
@@ -15,7 +15,7 @@
         <input type="email" name="email" id=""><br>
 
     </fieldset>
-    <p>o codigo sera enviado para o e-mail</p>
+    <p class="ativado">o codigo sera enviado para o e-mail</p>
     <button>enviar</button>
 </body>
 
