--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./img/face.png" alt="">
         </figure>
 
-        <form action="">
+        <form action="" id="formLogin">
             <fieldset>
                 <legend>email ou usuario:</legend>
                 <input type="email" name="email" id=""><br>
@@ -30,7 +30,7 @@
                 <legend>senha:</legend>
                 <input type="password" name="senha" id=""><br>
             </fieldset>
-            <button>acessar</button> <br>
+            <button value="acessar" id="acessar">acessar</button> <br>
         </form>
         <div>
             <a href="cadastrar.html">Cadastrar-se</a><br>
@@ -38,6 +38,7 @@
 
         </div>
     </main>
+    <script type="module" src="./js/login.js"></script>
 </body>
 
 </html>
