--- a/sistema.html
+++ b/sistema.html
@@ -129,8 +129,8 @@
 
         <fieldset>
           <legend>Itens</legend>
-        
-          <textarea  id="refeição" name="itens" placeholder="Itens" class="ocultar"></textarea>
+
+          <textarea id="refeição" name="itens" placeholder="Itens" class="ocultar"></textarea>
           <br>
         </fieldset>
 
@@ -158,6 +158,7 @@
     <p>Desenvolvido por:Jhenifer Lima</p>
 
   </footer>
+  <script type="module" src="./js/sistema.js"></script>
 </body>
 
 </html>
